--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "audit": "^0.0.6",
     "axios": "^0.27.2",
+    "fix": "^0.0.6",
+    "gh-pages": "^4.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "5.0.1",
